--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </style>
   </head>
   <body>
-    <script src="main.js"></script>
+    <script src="classicAlgorithms.js"></script>
   </body>
 </html>
